Deploy vitruviux app

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ DB_NAME=planter-db
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 GITHUB_USER=jordivilagut
-DOMAIN_NAME=farmify.app
+DOMAIN_NAME=vitruviux.com
