Rename project from planter to vitruviux

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 AWS_REGION=us-east-1
 PROJECT_ID=a9191e2a
 AMI_ID=ami-01f3a9a49e4032afb
-PROJECT_NAME=planter
-DB_NAME=planter-db
+PROJECT_NAME=vitruviux
+DB_NAME=vitruviuxdb
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 GITHUB_USER=jordivilagut
